Shadows not appearing in eevee? [2.8] #64452

Closed
opened 2019-05-10 20:18:04 +02:00 by Spencer Singer · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.4454

Blender Version
Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-09 10:46, hash: f877022956
Worked: (optional)

Short description of error
Shadows are straight-up not appearing. I checked the materials, and everything, theres just no shadows.

Exact steps for others to reproduce the error

Go into render mode of the attatched blend file

gobo testure 2.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.4454 **Blender Version** Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-09 10:46, hash: `f877022956` Worked: (optional) **Short description of error** Shadows are straight-up not appearing. I checked the materials, and everything, theres just no shadows. **Exact steps for others to reproduce the error** Go into render mode of the attatched blend file [gobo testure 2.blend](https://archive.blender.org/developer/F7025710/gobo_testure_2.blend)
Author

Added subscriber: @MLSpence

Added subscriber: @MLSpence

Added subscribers: @fclem, @brecht

Added subscribers: @fclem, @brecht
Clément Foucault was assigned by Brecht Van Lommel 2019-05-14 01:23:03 +02:00

If you reduce clip start and increase bleed bias for the lamp shadow settings, then it does work.

Not sure if this is expected behavior, if perhaps defaults should change, leaving to @fclem.

If you reduce clip start and increase bleed bias for the lamp shadow settings, then it does work. Not sure if this is expected behavior, if perhaps defaults should change, leaving to @fclem.

This issue was referenced by b76ccc7f80

This issue was referenced by b76ccc7f802b7bbaa1d5b78e3e4a33784c38072c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64452
No description provided.