Eevee: Change default shadowmap near clipping distance

And also fix some RNA props defaults and ranges.

Fix T64452 Shadows not appearing in eevee